[package]
name = "mbremote"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
mouse-keyboard-input = "0.9.1"
#tokio-macros = "2.6.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-modbus = { version = "0.17.0", default-features=false, features = ["tcp-server"] }
