[package]
name = "mbremote"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
mouse-keyboard-input = "0.9.1"
raw_tty = "0.1.0"
terminal-keycode = "1.1.1"
tokio = { version = "1.49.0", features = ["net", "macros"] }
tokio-modbus = { version = "0.17.0", default-features=false, features = ["tcp-server"] }
